Agrego una página de home como presentación del proyecto

--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/index.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/index.html
@@ -36,7 +36,8 @@
 </div>
 <div id="wrapper">
 	<div id="featured-wrapper">
-	
+			
+				
 
 	</div>
 </div>
@@ -47,6 +48,15 @@
 
 <script src="/static/jquery-2.1.1.min.js"></script>
 <script src="/static/home.js"></script>
+
+<script>
+$( document ).ready(function() {
+	
+	$("#featured-wrapper").load("/homefatures");
+
+});
+
+</script>
 
 </body>
 </html>
