--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/index.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/index.html
@@ -26,7 +26,7 @@
 <div id="menu-wrapper">
 	<div id="menu">
 		<ul>
-			<li class="current_page_item"><a href="#" accesskey="1" title="">Inicio</a></li>
+			<li id="inicio" class="current_page_item"><a href="#" accesskey="1" title="">Inicio</a></li>
 			<li id="stats"><a href="#" accesskey="2" title="">Estadísticas</a></li>
 			<li id="configuration"><a href="#" accesskey="3" title="">Configuración</a></li>
 			<li id="partidas"><a href="#" accesskey="4" title="">Partidas</a></li>
