--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
@@ -85,7 +85,7 @@
     <script>window.jQuery || document.write("<script src='static/jquery-2.1.1.min.js'>\x3C/script>")</script>
     <script src="/frontendhome/js/bootstrap.min.js"></script>
     <script src="/frontendhome/js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript">
+<!--     <script type="text/javascript">
       $(document).ready(function() {
         $('a[href^="#"]').click(function(event) {
             var id = $(this).attr("href");
@@ -96,7 +96,7 @@
         });
       });
     </script>
-  
+  -->
 
 </body>
 </html>
