Praparo el commit

--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/index.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/index.html
@@ -31,6 +31,7 @@
 			<li id="configuration"><a href="#" accesskey="3" title="">Configuración</a></li>
 			<li id="partidas"><a href="#" accesskey="4" title="">Partidas</a></li>
 			<li id="login"><a href="#" accesskey="5" title="">Login</a></li>
+			<li id="about"><a href="#" accesskey="6" title="">¿Quiénes somos?</a></li>
 		</ul>
 	</div>
 </div>
