Página Quiénes somos?

--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/about.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/about.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<head><title>¿QUÉ ES CHANGUITO?</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
 </head>
-<body>
+	<body>
 
-Página quienes somos
+	<div id="heading">
+          <h1>¿QUÉ ES CHANGUITO?</h1>
+		  </div>
+		  <div class="span6">
+		  <br>
+	<p class="lead">
+	Chaguito es un proyecto que surgió cuando los integrantes de  <img src="/static/images/SOMOS.jpg" width="100" height="30" alt="SOMOS!">  pensamos en cómo poder <b><font color=#FF3366>sumar</font></b> a la comunidad
+	<BR>
+	una herramienta para ayudar al crecimiento e integración de chicos con síndrome de down.
+	</p>
+	<p class="lead">
+	En los últimos años fueron naciendo aplicaciones y programas tecnológicos cuyo objetivo es aportar
+	<BR>
+	otra forma de aprendizaje para los chicos, explotando las ventajas de este tipo de herramientas.
+	</p>
+	<p class="lead">
+	Esto nos pareció más que interesante y decidimos sumarnos también
+	<BR>
+	presentando una forma <b><font color=#00CC00>interactiva y entretenida</font></b> donde el chico pueda ir familiarizándose
+	<BR>
+	con una actividad diaria de la realidad: la compra de productos en un supermercado.
+	</p>
+	</div>
+	
+	<p align="center">
+	<img src="/static/images/MrChangou.png" width="80" height="80"></p>
 
-<script src="/static/jquery-2.1.1.min.js"></script>
-</body>
+	<script src="/static/jquery-2.1.1.min.js"></script>
+	</body>
 </html>
