changuito en la home

--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
@@ -37,6 +37,17 @@
           <h1>Aprender + Jugar = Incluir</h1>
           <p class="lead">Proyecto “A BUSCAR EN GÓNDOLAS”</p>  
         </div>
+       <!-- DANI SI NO TE COPA SACA ESTAS LINEAS   -->
+        <div class="divider"></div>
+        <div class="row">
+          <div class="span8">
+	       <!-- ASI CARGAS EL GIF -->
+            <img src="/frontendhome/img/HastaNubes.gif" alt="" style="display: block;margin-left: auto;margin-right: auto;width:487px;height:321px">
+	       <!-- ASI CARGAS EL GIF -->
+          </div>
+        </div>
+       <!-- DANI SI NO TE COPA SACA ESTAS LINEAS   -->
+        
         <div class="divider"></div>
         <div class="row">
           <div class="span4">
