Cambios en about.html y features.html

--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
@@ -37,42 +37,55 @@
           <h1>Aprender + Jugar = Incluir</h1>
           <p class="lead">Proyecto “A BUSCAR EN GÓNDOLAS”</p>  
         </div>
-       <!-- DANI SI NO TE COPA SACA ESTAS LINEAS   -->
-        <div class="divider"></div>
-        <div class="row">
-          <div class="span8">
-	       <!-- ASI CARGAS EL GIF -->
-            <img src="/frontendhome/img/HastaNubes.gif" alt="" style="display: block;margin-left: auto;margin-right: auto;width:487px;height:321px">
-	       <!-- ASI CARGAS EL GIF -->
-          </div>
-        </div>
-       <!-- DANI SI NO TE COPA SACA ESTAS LINEAS   -->
         
-        <div class="divider"></div>
+        <div class="divider"/>
         <div class="row">
           <div class="span4">
             <!-- Put your photo link in the src attribute -->
-            <img class="img-polaroid" src="http://placehold.it/400x200" alt="">
+            <img class="img-polaroid" src="/static/images/scrnshot-super.png" alt="Pantalla principal" title="Pantalla principal">
           </div>
-          <div class="span8">
+          <div class="span6">
             <p class="lead">Aprovechar la tecnología para APRENDER JUGANDO de manera entretenida.</p> 
             <p class="lead">Aprender para lograr mayor INCLUSIÓN SOCIAL de personas con discapacidad.</p>
  			<p class="lead">Mayor inclusión para formar personas INDEPENDIENTES.</p> 
           </div>
         </div>
         <div class="row">
-            <div class="span8">
+            <div class="span6">
 				<p class="lead">Lograr desenvolverse en la situación cotidiana de la compra en un supermercado.</p>
 				<p class="lead">Familiarizarse con el manejo de dinero.</p>
 				<p class="lead">Ofrecer una herramienta para acompañar el aprendizaje.</p>
           </div>
           <div class="span4">
             <!-- Put your photo link in the src attribute -->
-            <img class="img-polaroid" src="http://placehold.it/400x200" alt="">
+            <img class="img-polaroid" src="/static/images/scrnshot-pago.png" alt="Pantalla de pago" title="Pantalla de pago">
           </div>
         </div>
       </div>
       <div class="divider"></div>
+	  
+	  <BR>
+	  <div id="instrucciones">
+		<h1>¿Cómo hago para poder jugar?</h1>
+	  <span style="vertical-align: middle; font-size: 18px;">
+	  ¡Fácil! Primero descargate la aplicación en tu tablet desde el market de Android,
+	  haciendo click <a target="_blank" href="https://play.google.com/store">¡aquí!</a>.
+	  Luego ya vas a poder disfrutar del juego.
+	  <BR>
+	  <BR>
+	  Para aprovechar aún más las funcionalidades de <font face="Trebuchet MS">Changuito</font>, hacé lo siguiente:
+	  <BR>
+	  Accedé a la configuración del juego y creá un usuario para el dispositivo, mediante el botón <i>Asignar jugador</i>.
+	  <BR>
+	  Con ese mismo usuario, volvé a ingresar a este sitio, y podrás ver las estadísticas que se generan a partir de las partidas jugadas!
+	  <BR>
+	  Y muchas otras cosas más.</span>
+	  
+	  
+	  </div>
+	  
+	  <!-- <BR>
+	  <a href="about.html">¡CONOCENOS MÁS!</a> LINK A PESTAÑA QUIENES SOMOS - ¿cómo hacer para que aparezca con estilo? -->
         
       <!-- Screenshot items -->
       <div id="features" class="row">
