Tareas de diseño web: features.html y about.html

--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
@@ -42,7 +42,7 @@
         <div class="row">
           <div class="span4">
             <!-- Put your photo link in the src attribute -->
-            <img class="img-polaroid" src="/static/images/scrnshot-super.png" alt="Pantalla principal" title="Pantalla principal">
+            <img class="img-polaroid" src="/static/images/scrnshot-super.png" width="300" height="100" alt="Pantalla principal" title="Pantalla principal">
           </div>
           <div class="span6">
             <p class="lead">Aprovechar la tecnología para APRENDER JUGANDO de manera entretenida.</p> 
@@ -84,8 +84,9 @@
 	  
 	  </div>
 	  
-	  <!-- <BR>
-	  <a href="about.html">¡CONOCENOS MÁS!</a> LINK A PESTAÑA QUIENES SOMOS - ¿cómo hacer para que aparezca con estilo? -->
+	  <BR>
+	  <!--<a href="about.html">¡CONOCENOS MÁS!</a> LINK A PESTAÑA QUIENES SOMOS - ¿cómo hacer para que aparezca con estilo? -->
+	  <a href="about.html" data-ajax="false">¡CONOCENOS MÁS!</a>
         
       <!-- Screenshot items -->
       <div id="features" class="row">
