--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/index.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/index.html
@@ -20,7 +20,7 @@
 			<h1><a href="#">Changuito</a></h1>
 			<span>Aprendiendo juntos</span>
 		</div>
-		<div id="triangle-up"></div>
+		<!--<div id="triangle-up"></div> -->
 	</div>
 </div>
 <div id="menu-wrapper">
