--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/about.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/about.html
@@ -20,18 +20,14 @@
 								   
 </head>
 	<body>
-
+<div id="container">
 	<div id="about">
-	<!--<div class="divider"></div>-->
-
 			<h1>¿QUÉ ES CHANGUITO?</h1>
-		
+
 	<div class="row">
 	
-	<!--<div class="span6">-->
-		<div style="text-align: center;">
-			<!--<p class="lead">-->
-			<span style="vertical-align: middle; font-size: 17px;">
+		<div class="span8">
+			<p class="lead">
 			Changuito es un proyecto que surgió cuando los integrantes de  <img src="/static/images/SOMOS.jpg" width="100" height="30" alt="SOMOS!" style="vertical-align:middle">  
 			pensamos en cómo poder <b><font color=#FF3366>sumar</font></b> a la comunidad
 			<BR>
@@ -50,24 +46,15 @@
 			presentando una forma <b><font color=#00CC00>interactiva y entretenida</font></b> donde el chico pueda ir familiarizándose
 			<BR>
 			con una actividad diaria de la realidad: la compra de productos en un supermercado.
-			<!-- </p>-->
-			</span>
-		
-	       <!-- DANI SI NO TE COPA SACA ESTAS LINEAS   -->
-        
-		<span style="vertical-align: middle;">
-        <!-- <div class="span4">-->
-	       <!-- ASI CARGAS EL GIF -->
+			</p>
+		</div>
+
+        <div class="span4">
             <img src="/frontendhome/img/HastaNubes.gif" alt="" style="display: block;margin-left: auto;margin-right: auto;width:410px;height:350px">
-	       <!-- ASI CARGAS EL GIF -->
-		   </span>
-		  <!-- </div>-->
-        </div>  <!--div style-->
-	<!--</div>-->
-       <!-- DANI SI NO TE COPA SACA ESTAS LINEAS   -->
+        </div>
 	</div>
 	</div>
-	
+	</div>
 	
 	
 	<!--<BR>
