Formato de diseño aplicado a todas las páginas.

--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
@@ -80,13 +80,10 @@
 	  Con ese mismo usuario, volvé a ingresar a este sitio, y podrás ver las estadísticas que se generan a partir de las partidas jugadas!
 	  <BR>
 	  Y muchas otras cosas más.</span>
-	  
-	  
 	  </div>
 	  
 	  <BR>
-	  <!--<a href="about.html">¡CONOCENOS MÁS!</a> LINK A PESTAÑA QUIENES SOMOS - ¿cómo hacer para que aparezca con estilo? -->
-	  <a href="about.html" data-ajax="false">¡CONOCENOS MÁS!</a>
+	  <a href="#" accesskey="6"><div class="link"><h2 id="conocenos">¡CONOCENOS MÁS!</h2></div></a>
         
       <!-- Screenshot items -->
       <div id="features" class="row">
@@ -110,6 +107,7 @@
     <script>window.jQuery || document.write("<script src='static/jquery-2.1.1.min.js'>\x3C/script>")</script>
     <script src="/frontendhome/js/bootstrap.min.js"></script>
     <script src="/frontendhome/js/jquery.easing.1.3.js"></script>
+	<script src="/static/features.js"></script>
 <!--     <script type="text/javascript">
       $(document).ready(function() {
         $('a[href^="#"]').click(function(event) {
