--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/about.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/about.html
@@ -20,46 +20,45 @@
 								   
 </head>
 	<body>
-<div id="container">
-	<div id="about">
+	<div id="wrapper">
+	<div id="featured-wrapper">
+		<div class="container">
+
+		<div id="about">
 			<h1>¿QUÉ ES CHANGUITO?</h1>
 
-	<div class="row">
-	
-		<div class="span8">
-			<p class="lead">
-			Changuito es un proyecto que surgió cuando los integrantes de  <img src="/static/images/SOMOS.jpg" width="100" height="30" alt="SOMOS!" style="vertical-align:middle">  
-			pensamos en cómo poder <b><font color=#FF3366>sumar</font></b> a la comunidad
-			<BR>
-			una herramienta para ayudar al crecimiento e integración de chicos con síndrome de down, a través de la tesis de la facultad.
-			<BR>
-			<!-- </p>-->
-			<!-- <p class="lead">-->
-			En los últimos años fueron naciendo aplicaciones y programas tecnológicos cuyo objetivo es aportar
-			<BR>
-			otra forma de aprendizaje para los chicos, explotando las ventajas de este tipo de herramientas.
-			<BR>
-			<!-- </p>
-			<p class="lead">-->
-			Esto nos pareció más que interesante y decidimos sumarnos también
-			<BR>
-			presentando una forma <b><font color=#00CC00>interactiva y entretenida</font></b> donde el chico pueda ir familiarizándose
-			<BR>
-			con una actividad diaria de la realidad: la compra de productos en un supermercado.
-			</p>
-		</div>
+			<div class="row">
+				<div class="span6 offset1">
+					<p class="lead">
+					Changuito es un proyecto que surgió cuando los integrantes de  <img src="/static/images/SOMOS.jpg" width="100" height="30" alt="SOMOS!" style="vertical-align:middle">  
+					pensamos en cómo poder <b><font color=#FF3366>sumar</font></b> a la comunidad
+					<BR>
+					una herramienta para ayudar al crecimiento e integración de chicos con síndrome de down, a través de la tesis de la facultad.
+					<BR>
+					<!-- </p>-->
+					<!-- <p class="lead">-->
+					En los últimos años fueron naciendo aplicaciones y programas tecnológicos cuyo objetivo es aportar
+					<BR>
+					otra forma de aprendizaje para los chicos, explotando las ventajas de este tipo de herramientas.
+					<BR>
+					<!-- </p>
+					<p class="lead">-->
+					Esto nos pareció más que interesante y decidimos sumarnos también
+					<BR>
+					presentando una forma <b><font color=#00CC00>interactiva y entretenida</font></b> donde el chico pueda ir familiarizándose
+					<BR>
+					con una actividad diaria de la realidad: la compra de productos en un supermercado.
+					</p>
+				</div>
 
-        <div class="span4">
-            <img src="/frontendhome/img/HastaNubes.gif" alt="" style="display: block;margin-left: auto;margin-right: auto;width:410px;height:350px">
-        </div>
+				<div class="span4 offset1">
+					<img src="/frontendhome/img/HastaNubes.gif" alt="" style="display: block;margin-left: auto;margin-right: auto;width:440px;height:390px">
+				</div>
+			</div>
+		</div>
 	</div>
 	</div>
 	</div>
-	
-	
-	<!--<BR>
-	<p align="center">
-	<img src="/static/images/MrChangou.png" width="80" height="80"></p>-->
 
 	<script src="/static/jquery-2.1.1.min.js"></script>
 	</body>
