Agregué la lógica para que algunas páginas aparezcan sólo si se clicleó en Aceptar, en el login. Luego habrá que validar que efectivamente se haya "logueado" (user y pass correctos, etc).

--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/about.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<!-- <head><title>¿QUÉ ES CHANGUITO?</title> -->
+<head><title>¿QUÉ ES CHANGUITO?</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <!-- Le styles -->
@@ -13,17 +13,16 @@
     <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="http://twitter.github.com/bootstrap/assets/ico/favicon.png">
-								   
-								   
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="http://twitter.github.com/bootstrap/assets/ico/favicon.png">
 </head>
+
 	<body>
 	<div id="wrapper">
 	<div id="featured-wrapper">
 		<div class="container">
-
+		<br>
 		<div id="about">
 			<h1>¿QUÉ ES CHANGUITO?</h1>
 
