--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/index.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/index.html
@@ -24,16 +24,27 @@
 	</div>
 </div>
 <div id="menu-wrapper">
+	<!--<div class="row">-->
 	<div id="menu">
 		<ul>
 			<li id="inicio" class="current_page_item"><a href="#" accesskey="1" title="">Inicio</a></li>
-			<li id="stats"><a href="#" accesskey="2" title="">Estadísticas</a></li>
-			<li id="configuration"><a href="#" accesskey="3" title="">Configuración</a></li>
-			<li id="partidas"><a href="#" accesskey="4" title="">Partidas</a></li>
-			<li id="login"><a href="#" accesskey="5" title="">Login</a></li>
 			<li id="about"><a href="#" accesskey="6" title="">¿Quiénes somos?</a></li>
+			<li id="login"><a href="#" accesskey="5" title="">Login</a></li>
+			<!-- <li id="stats"><a href="#" accesskey="2" title="">Estadísticas</a></li>
+			<li id="configuration"><a href="#" accesskey="3" title="">Configuración</a></li>
+			<li id="partidas"><a href="#" accesskey="4" title="">Partidas</a></li> -->
 		</ul>
 	</div>
+	
+	<div id="menu_opt">
+		<ul>
+			<li id="stats"><a href="#" accesskey="2" title="">Estadísticas</a></li>
+			<li id="configuration"><a href="#" accesskey="3" title="">Configuración</a></li>
+			<li id="partidas"><a href="#" accesskey="4" title="">Partidas</a></li>		
+		</ul>
+	</div>
+	
+	<!--</div>-->
 </div>
 <div id="wrapper">
 	<div id="featured-wrapper">
