Agregamos la página de Demo, yseguimos mejorando el diseño.

--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/about.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/about.html
@@ -27,7 +27,7 @@
 			<h1>¿QUÉ ES CHANGUITO?</h1>
 
 			<div class="row">
-				<div class="span6 offset1">
+				<div class="span6 offset13">
 					<p class="lead">
 					Changuito es un proyecto que surgió cuando los integrantes de  <img src="/static/images/SOMOS.jpg" width="100" height="30" alt="SOMOS!" style="vertical-align:middle">  
 					pensamos en cómo poder <b><font color=#FF3366>sumar</font></b> a la comunidad
@@ -54,6 +54,27 @@
 					<img src="/frontendhome/img/HastaNubes.gif" alt="" style="display: block;margin-left: auto;margin-right: auto;width:440px;height:390px">
 				</div>
 			</div>
+			<br>
+			<img src="/static/images/downarrows.png" style="display: inline;margin-left: auto;margin-right: auto;width:50px;height:50px; float:left">
+			<p id="title1"><sub><b>¿A dónde apuntamos?</b></sub></p><br><br>
+			<p class="lead"><br>
+			A que los chicos puedan reflejar en la realidad la situación simulada y jugada con la aplicación.<br>
+			A que se familiaricen con el manejo del dinero, y ejerciten cálculos matemáticos simples.
+			</p>
+			<br>
+			<div class="row" id="footer">
+				<div class="span1 offset14">
+				<img src="/static/images/minibr-left.png" style="display: in-line;margin-left: 5px;margin-right: 5px;width:30px; height:70px; float: right">
+				</div>
+				<div class="span15 offset13">
+				<p id="txtfooter"><sub>SOMOS: Fernando, Sergio, Nicolás y Daniela</sub></p>
+				</div>
+				<div class="span1 offset13">
+				<img src="/static/images/minibr-right.png" style="display: in-line;margin-left: 5px;margin-right: 5px;width:30px; height:70px; float: left">
+				</div>
+			</div>
+			<img src="/static/images/banderines.png" style="display: in-line;margin-left: 5px;margin-right: 95px;width:310px; height:30px; float: right">
+			<br><br>
 		</div>
 	</div>
 	</div>
