--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
@@ -53,16 +53,22 @@
         </div>
         <div class="row">
             <div class="span6">
-				<p class="lead">Lograr desenvolverse en la situación cotidiana de la compra en un supermercado.</p>
-				<p class="lead">Familiarizarse con el manejo de dinero.</p>
-				<p class="lead">Ofrecer una herramienta para acompañar el aprendizaje.</p>
+				<!--<p class="lead">Lograr desenvolverse en la situación cotidiana de la compra en un supermercado.</p>
+				<p class="lead">Familiarizarse con el manejo de dinero.</p>-->
+				
+				<p class="lead">Nuestro objetivo es ofrecer una herramienta para acompañar el aprendizaje.</p>
+				<br><br>
+				<p class="lead">Probá el juego en su versión online
+				<img src="/frontendhome/img/arrow.png" style="display: in-line;margin-left: 10px;margin-right: 10px;width:50px;height:40px">
+				<a href="#" style="text-decoration: none;display: in-line" id="linkdemo"><b>¡CLICK AQUÍ!</b></a></p>
+				<p class="lead">Es un demo que te dará una idea más clara de lo que queremos explicar.</p>
           </div>
           <div class="span4">
-            <!-- Put your photo link in the src attribute -->
             <img class="img-polaroid" src="/static/images/scrnshot-pago.png" alt="Pantalla de pago" title="Pantalla de pago">
           </div>
         </div>
       </div>
+	  <BR>
       <div class="divider"></div>
 	  
 	  <BR>
@@ -71,6 +77,7 @@
 	  <span style="vertical-align: middle; font-size: 18px;">
 	  ¡Fácil! Primero descargate la aplicación en tu tablet desde el market de Android,
 	  haciendo click <a target="_blank" href="https://play.google.com/store">¡aquí!</a>.
+	  <BR>
 	  Luego ya vas a poder disfrutar del juego.
 	  <BR>
 	  <BR>
@@ -83,21 +90,32 @@
 	  Y muchas otras cosas más.</span>
 	  </div>
 	  
-	  <BR>
-	  <a href="#" accesskey="6" style="text-decoration: none"><div class="link"><h2 id="conocenos">¡CONOCENOS MÁS!</h2></div></a>
-        
+	  <br><br><br>
+	  <div class="row">
+		<div class="span4">
+			<img src="/static/images/bracket-left.png" style="display: in-line;margin-left: 5px;margin-right: 5px;width:30px; height:70px; float: right">
+		</div>
+		<div class="span13">
+			<a href="#" accesskey="6" style="text-decoration: none"><div class="link"><h2 id="conocenos">¡CONOCENOS MÁS!</h2></div></a>
+		</div>
+		<div class="span4">
+			<img src="/static/images/bracket-right.png" style="display: in-line;margin-left: 5px;margin-right: 5px;width:30px; height:70px; float: left">
+		</div>
+      </div>
+	  
+	  <br><br>
       <!-- Screenshot items -->
       <div id="features" class="row">
-        <div class="span4">
-          <img src="/frontendhome/img/gear-icon.png" alt="">
+        <div class="span14">
+          <img src="/frontendhome/img/gear-icon.png">
           <p>Configura el juego y utiliza distintos niveles dificultades.</p>
         </div>
-        <div class="span4">
-          <img src="/frontendhome/img/monitoring-icon.png" alt="">
+        <div class="span14">
+          <img src="/frontendhome/img/monitoring-icon.png">
           <p>Usalo en tu tablet con Android o en tu PC</p>
         </div>
-        <div class="span4">
-          <img src="/frontendhome/img/multi-files-icon.png" alt="">
+        <div class="span14">
+          <img src="/frontendhome/img/multi-files-icon.png">
           <p>Visualiza las estadísticas y compartilas a través de Facebook.</p>
         </div>
       </div>
