Agregamos un poco de formato a la página Administración, y unos toques varios.

--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/features.html
@@ -36,7 +36,7 @@
       <div id="about">
         <div id="heading">
           <h1>Aprender + Jugar = Incluir</h1>
-          <p class="lead">Proyecto “A BUSCAR EN GÓNDOLAS”</p>  
+          <p class="lead">Proyecto “A BUSCAR EN GÓNDOLAS”</p>
         </div>
         
         <div class="divider"/>
@@ -64,7 +64,7 @@
 				<p class="lead">Es un demo que te dará una idea más clara de lo que queremos explicar.</p>
           </div>
           <div class="span4">
-            <img class="img-polaroid" src="/static/images/scrnshot-pago.png" alt="Pantalla de pago" title="Pantalla de pago">
+            <img class="img-polaroid" src="/static/images/scrnshot-pago.png" width="300" height="100" alt="Pantalla de pago" title="Pantalla de pago">
           </div>
         </div>
       </div>
